fix: Viewtransitions cause flickering popover zindex

--- a/app/globals.css
+++ b/app/globals.css
@@ -95,3 +95,7 @@
   }
 }
 
+
+::view-transition-group(anything) {
+  z-index: 100;
+  }
